added food categories

--- a/src/index.css
+++ b/src/index.css
@@ -124,3 +124,16 @@ body {
   background: var(--primary-color);
   color: #fff;
 }
+
+.category-info{
+  background: #dde6ce;
+}
+
+
+.slick-slide {
+  padding: 0 10px; 
+}
+
+.slick-list {
+  margin: 0 -10px; 
+}
