--- a/src/index.css
+++ b/src/index.css
@@ -150,17 +150,17 @@ body {
   margin-top: unset !important;
 }
 
+.swiper-button-prev svg, .swiper-button-next svg{
+  width: 20px;
+  color: #000;
+}
+
 .swiper-button-prev:after, .swiper-button-next:after{
-  font-size: 20px !important;
-  margin-top: unset !important;
-  color: #000 ;
-  font-weight: 600;
+  content: "";
 }
 
 .slider-button{
   display: flex;
   align-items: center;
   gap: 1rem;
-  font-size: 5px;
-  
 }
