updated cart componets

--- a/src/index.css
+++ b/src/index.css
@@ -116,6 +116,10 @@ body {
   background-color: rgba(179,165,141,.33);
 }
 
+.cart-container {
+  background-color: var(--antique-white);
+}
+
 .cart-footer{
   background-color: rgba(90,83,71,.2);
 }
