--- a/src/index.css
+++ b/src/index.css
@@ -188,3 +188,22 @@ input[type="password"]::-ms-clear {
     margin: -25px 0;
   }
 }
+
+
+.loader {
+  border: 8px solid #f3f3f3; 
+  border-top: 8px solid #286140;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
